SUBDIRS = field node

javadir = $(datadir)/java/vrml

JAVAROOT = $(top_builddir)/java

noinst_JAVA = Browser.java Event.java Field.java MField.java ConstField.java \
ConstMField.java BaseNode.java InvalidEventInException.java \
InvalidEventOutException.java InvalidExposedFieldException.java \
InvalidFieldChangeException.java InvalidFieldException.java \
InvalidRouteException.java InvalidVRMLSyntaxException.java

EXTRA_DIST = $(noinst_JAVA)
